background-pic-changed

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ nav a:hover {
 
 
 .content {
-    background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8)), url('BG2\ FOR\ OASIS.jpeg');
+    background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8)), url('/shivam\ kumar\ photo.jpg');
     overflow-x: hidden;
     background-size: cover;
     background-repeat: no-repeat;
