--- a/style.css
+++ b/style.css
@@ -4,6 +4,17 @@
     box-sizing: border-box;
 
 }
+body{
+    background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8)), url('shivam\ kumar\ photo.jpg');
+    /* background:linear-gradient(red, orange, yellow, green, blue), url('shivam\ kumar\ photo.jpg'); */
+    
+    overflow: hidden;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+}
 
 header {
     padding-top: 15px;
@@ -58,9 +69,9 @@ nav a:hover {
 }
 
 
-.content {
-    background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8)), url('/shivam\ kumar\ photo.jpg');
-    overflow-x: hidden;
+/* .content { */
+    /* background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.8)), url('/shivam\ kumar\ photo.jpg'); */
+    /* overflow-x: hidden;
     background-size: cover;
     background-repeat: no-repeat;
     position: absolute;
@@ -68,7 +79,7 @@ nav a:hover {
     height: 100vh;
 
 
-}
+} */
 
 .message {
 
